[tool.poetry]
name = "Bubble Trouble"
version = "0.1.0"
description = "A recreation of the classic bubble popping game."
authors = ["ratchek <git@ratchek.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
